--- a/modkitopt/nextflow.config
+++ b/modkitopt/nextflow.config
@@ -1,9 +1,11 @@
 params {
     modbam        = null
     mod_type      = null
+    modkit        = null
     ground_truth  = null
     filter_values = [0, 20, 40, 60]          // example values
     mod_values    = [0.1, 0.2, 0.3, 0.5]     // example values
     outdir        = "results"
 }
 
+conda.enabled = true
