--- a/modkitopt/nextflow.config
+++ b/modkitopt/nextflow.config
@@ -1,11 +1,12 @@
 params {
-    modbam        = null
-    mod_type      = null
-    modkit        = null
-    ground_truth  = null
-    filter_values = [0, 20, 40, 60]          // example values
-    mod_values    = [0.1, 0.2, 0.3, 0.5]     // example values
-    outdir        = "results"
+    modbam            = null
+    mod_type          = null
+    modkit            = null
+    fasta             = null
+    ground_truth      = null
+    filter_thresholds = [0.5, 0.75, 0.9, 0.95, 0.99, 0.995]
+    mod_thresholds    = [0.5, 0.75, 0.9, 0.95, 0.99, 0.995]
+    outdir            = "results"
 }
 
 conda.enabled = true
