--- a/modkitopt/nextflow.config
+++ b/modkitopt/nextflow.config
@@ -4,8 +4,8 @@ params {
     modkit            = null
     fasta             = null
     ground_truth      = null
-    filter_thresholds = [0.5, 0.75, 0.9, 0.95, 0.99, 0.995]
-    mod_thresholds    = [0.5, 0.75, 0.9, 0.95, 0.99, 0.995]
+    filter_thresholds = [0.5, 0.99, 0.995]
+    mod_thresholds    = [0.5, 0.99, 0.995]
     outdir            = "results"
 }
 
