Support for execution environments & resource handling.

--- a/modkitopt/nextflow.config
+++ b/modkitopt/nextflow.config
@@ -1,12 +1,37 @@
 params {
-    modbam            = null
-    mod_type          = null
-    modkit            = null
-    fasta             = null
-    ground_truth      = null
-    filter_thresholds = [0.5, 0.99, 0.995]
-    mod_thresholds    = [0.5, 0.99, 0.995]
-    outdir            = "results"
+    modbam            = null            // Path to modBAM file output by mod caller
+    mod_type          = null            // Type of modification
+    modkit            = null            // Path to modkit executable
+    fasta             = null            // Reference fasta file for modkit
+    ground_truth      = null            // Ground truth modification sites
+    filter_thresholds = [0.99, 0.995]   // filter_threshold values to test
+    mod_thresholds    = [0.99, 0.995]   // mod_threshold values to test
+    outdir            = "results"       // Where to write results
+    pileup_cpus       = 8               // Default CPU count for modkit pileup
 }
 
-conda.enabled = true
+profiles {
+    local {
+        process.executor = 'local'
+        params.pileup_cpus = 2
+        conda.enabled = true
+    }
+
+    slurm {
+        process.executor = 'slurm'
+        process.queue = 'general'
+        conda.enabled = true
+    }
+
+    pbs {
+        process.executor = 'pbs'
+        conda.enabled = true
+    }
+
+    // default profile
+    standard {
+        process.executor = 'local'
+        params.pileup_cpus = 2
+        conda.enabled = true
+    }
+}
