Updated conda environment & minor updates.

--- a/env.yaml
+++ b/env.yaml
@@ -1,5 +1,14 @@
 name: modkitopt-env
 channels:
+  - conda-forge
   - bioconda
+  - defaults
 dependencies:
   - samtools
+  - r-base
+  - r-glue
+  - r-tidyverse
+  - r-rlist
+  - r-ggrepel
+  - bioconductor-genomicfeatures
+  - bioconductor-txdbmaker
