Remove conda from HPC profiles.

--- a/nextflow.config
+++ b/nextflow.config
@@ -20,12 +20,12 @@ profiles {
     slurm {
         process.executor = 'slurm'
         process.queue = 'general'
-        conda.enabled = true
+        conda.enabled = false
     }
 
     pbs {
         process.executor = 'pbs'
-        conda.enabled = true
+        conda.enabled = false
     }
 
     // default profile
