Running on gadi with pbspro profile.

--- a/nextflow.config
+++ b/nextflow.config
@@ -7,7 +7,14 @@ params {
     filter_thresholds = [0.99, 0.995]   // filter_threshold values to test
     mod_thresholds    = [0.99, 0.995]   // mod_threshold values to test
     outdir            = "results"       // Where to write results
-    pileup_cpus       = 8               // Default CPU count for modkit pileup
+    default_cpus      = 1               // Default CPU count to request per process
+    default_memory    = '8GB'           // Default memory to request per process
+    default_time      = '1h'            // Default time to request per process
+    pileup_cpus       = 8               // Default CPU count to request for modkit pileup
+    pileup_memory     = '8GB'           // Default memory to request for modkit pileup
+    pileup_time       = '4h'            // Default time to request for modkit pileup
+    hpc_project       = 'abc'           // User to override this if running in HPC environ
+    hpc_storage       = 'storage/path'  // User to override this if running in HPC environ
 }
 
 profiles {
@@ -20,12 +27,57 @@ profiles {
     slurm {
         process.executor = 'slurm'
         process.queue = 'general'
-        conda.enabled = false
+        conda.enabled = true
     }
 
     pbs {
-        process.executor = 'pbs'
-        conda.enabled = false
+        process {
+            executor = 'pbspro'
+
+            // Default PBS directives
+            queue    = 'normal'
+            project  = params.hpc_project
+            storage  = params.hpc_storage
+
+            // Default resources for all processes
+            cpus   = params.default_cpus
+            memory = params.default_memory
+            time   = params.default_time
+
+            // Per-process overrides
+            withName: 'MODKIT_PILEUP' {
+                cpus   = params.pileup_cpus
+                memory = params.pileup_memory
+                time   = params.pileup_time
+            }
+        }
+
+        conda.enabled = true
+    }
+
+    pbspro {
+        process {
+            executor = 'pbspro'
+
+            // Default PBS directives
+            queue    = 'normal'
+            project  = params.hpc_project
+            storage  = params.hpc_storage
+
+            // Default resources for all processes
+            cpus   = params.default_cpus
+            memory = params.default_memory
+            time   = params.default_time
+
+            // Per-process overrides
+            withName: 'MODKIT_PILEUP' {
+                cpus   = params.pileup_cpus
+                memory = params.pileup_memory
+                time   = params.pileup_time
+            }
+        }
+
+        conda.enabled = true
     }
 
     // default profile
