Test full range of thresholds.

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,20 +1,22 @@
 params {
-    modbam            = null            // Path to modBAM file output by mod caller
-    mod_type          = null            // Type of modification
-    modkit            = null            // Path to modkit executable
-    fasta             = null            // Reference fasta file for modkit
-    ground_truth      = null            // Ground truth modification sites
-    filter_thresholds = [0.99, 0.995]   // filter_threshold values to test
-    mod_thresholds    = [0.99, 0.995]   // mod_threshold values to test
-    outdir            = "results"       // Where to write results
-    default_cpus      = 1               // Default CPU count to request per process
-    default_memory    = '8GB'           // Default memory to request per process
-    default_time      = '1h'            // Default time to request per process
-    pileup_cpus       = 8               // Default CPU count to request for modkit pileup
-    pileup_memory     = '8GB'           // Default memory to request for modkit pileup
-    pileup_time       = '4h'            // Default time to request for modkit pileup
-    hpc_project       = 'abc'           // User to override this if running in HPC environ
-    hpc_storage       = 'storage/path'  // User to override this if running in HPC environ
+    modbam            = null                // Path to modBAM file output by mod caller
+    mod_type          = null                // Type of modification
+    modkit            = null                // Path to modkit executable
+    fasta             = null                // Reference fasta file for modkit
+    ground_truth      = null                // Ground truth modification sites
+    filter_thresholds = [0.5, 0.75, 0.9,
+                         0.95, 0.99, 0.995] // filter_threshold values to test
+    mod_thresholds    = [0.5, 0.75, 0.9,
+                         0.95, 0.99, 0.995] // mod_threshold values to test
+    outdir            = "results"           // Where to write results
+    default_cpus      = 1                   // Default CPU count to request per process
+    default_memory    = '8GB'               // Default memory to request per process
+    default_time      = '1h'                // Default time to request per process
+    pileup_cpus       = 8                   // Default CPU count to request for modkit pileup
+    pileup_memory     = '8GB'               // Default memory to request for modkit pileup
+    pileup_time       = '4h'                // Default time to request for modkit pileup
+    hpc_project       = 'abc'               // User to override this if running in HPC environ
+    hpc_storage       = 'storage/path'      // User to override this if running in HPC environ
 }
 
 profiles {
