Add threads to samtools.

--- a/nextflow.config
+++ b/nextflow.config
@@ -9,10 +9,13 @@ params {
     mod_thresholds    = [0.5, 0.75, 0.9,
                          0.95, 0.99, 0.995] // mod_threshold values to test
     outdir            = "results"           // Where to write results
-    default_cpus      = 1                   // Default CPU count to request per process
+    default_cpus      = 1                   // Default CPUs to request per process
     default_memory    = '8GB'               // Default memory to request per process
     default_time      = '1h'                // Default time to request per process
-    pileup_cpus       = 8                   // Default CPU count to request for modkit pileup
+    filter_cpus       = 8                   // Default CPUs to request for samtools filter
+    sort_cpus         = 8                   // Default CPUs to request for samtools sort
+    index_cpus        = 4                   // Default CPUs to request for samtools index
+    pileup_cpus       = 8                   // Default CPUs to request for modkit pileup
     pileup_memory     = '30GB'              // Default memory to request for modkit pileup
     pileup_time       = '1h'                // Default time to request for modkit pileup
     hpc_project       = 'abc'               // User to override this if running in HPC environ
@@ -47,6 +50,15 @@ profiles {
             time           = params.default_time
 
             // Per-process overrides
+            withName: 'SAMTOOLS_FILTER' {
+                cpus       = params.filter_cpus
+            }
+            withName: 'SAMTOOLS_SORT' {
+                cpus       = params.sort_cpus
+            }
+            withName: 'SAMTOOLS_INDEX' {
+                cpus       = params.index_cpus
+            }
             withName: 'MODKIT_PILEUP' {
                 cpus       = params.pileup_cpus
                 memory     = params.pileup_memory
@@ -72,6 +84,15 @@ profiles {
             time           = params.default_time
 
             // Per-process overrides
+            withName: 'SAMTOOLS_FILTER' {
+                cpus       = params.filter_cpus
+            }
+            withName: 'SAMTOOLS_SORT' {
+                cpus       = params.sort_cpus
+            }
+            withName: 'SAMTOOLS_INDEX' {
+                cpus       = params.index_cpus
+            }
             withName: 'MODKIT_PILEUP' {
                 cpus       = params.pileup_cpus
                 memory     = params.pileup_memory
