Config file PBS-agnostic. Added disk use for T2G.

--- a/nextflow.config
+++ b/nextflow.config
@@ -18,6 +18,8 @@ params {
     pileup_cpus       = 8                   // Default CPUs to request for modkit pileup
     pileup_memory     = '30GB'              // Default memory to request for modkit pileup
     pileup_time       = '1h'                // Default time to request for modkit pileup
+    t2g_disk          = 5GB                 // Default job filesystem disk space to request for t2g
+    hpc_queue         = 'normal'            // User to override this if running in HPC environ
     hpc_project       = 'abc'               // User to override this if running in HPC environ
     hpc_storage       = 'storage/path'      // User to override this if running in HPC environ
 }
@@ -39,12 +41,8 @@ profiles {
         process {
             executor       = 'pbspro'
 
-            // Default PBS directives
-            queue          = 'normal'
-            project        = params.hpc_project
-            storage        = params.hpc_storage
-
-            // Default resources for all processes
+            // Default resources
+            clusterOptions = '-q ${params.hpc_queue} -P ${params.hpc_project} -lstorage=${params.hpc_storage}'
             cpus           = params.default_cpus
             memory         = params.default_memory
             time           = params.default_time
@@ -63,6 +61,9 @@ profiles {
                 cpus       = params.pileup_cpus
                 memory     = params.pileup_memory
                 time       = params.pileup_time
+            }
+            withName: 'T2G' {
+                clusterOptions = '-q ${params.hpc_queue} -P ${params.hpc_project} -lstorage=${params.hpc_storage} -ljobfs=${params.t2g_disk}'
             }
         }
 
@@ -73,12 +74,8 @@ profiles {
         process {
             executor       = 'pbspro'
 
-            // Default PBS directives
-            queue          = 'normal'
-            project        = params.hpc_project
-            storage        = params.hpc_storage
-
-            // Default resources for all processes
+            // Default resources
+            clusterOptions = '-q ${params.hpc_queue} -P ${params.hpc_project} -lstorage=${params.hpc_storage}'
             cpus           = params.default_cpus
             memory         = params.default_memory
             time           = params.default_time
@@ -97,6 +94,9 @@ profiles {
                 cpus       = params.pileup_cpus
                 memory     = params.pileup_memory
                 time       = params.pileup_time
+            }
+            withName: 'T2G' {
+                clusterOptions = '-q ${params.hpc_queue} -P ${params.hpc_project} -lstorage=${params.hpc_storage} -ljobfs=${params.t2g_disk}'
             }
         }
 
