Resolve syntax error in config file.

--- a/nextflow.config
+++ b/nextflow.config
@@ -18,7 +18,7 @@ params {
     pileup_cpus       = 8                   // Default CPUs to request for modkit pileup
     pileup_memory     = '30GB'              // Default memory to request for modkit pileup
     pileup_time       = '1h'                // Default time to request for modkit pileup
-    t2g_disk          = 5GB                 // Default job filesystem disk space to request for t2g
+    t2g_disk          = '5GB'               // Default job filesystem disk space to request for t2g
     hpc_queue         = 'normal'            // User to override this if running in HPC environ
     hpc_project       = 'abc'               // User to override this if running in HPC environ
     hpc_storage       = 'storage/path'      // User to override this if running in HPC environ
@@ -42,7 +42,7 @@ profiles {
             executor       = 'pbspro'
 
             // Default resources
-            clusterOptions = '-q ${params.hpc_queue} -P ${params.hpc_project} -lstorage=${params.hpc_storage}'
+            clusterOptions = "-q ${params.hpc_queue} -P ${params.hpc_project} -lstorage=${params.hpc_storage}"
             cpus           = params.default_cpus
             memory         = params.default_memory
             time           = params.default_time
@@ -63,7 +63,7 @@ profiles {
                 time       = params.pileup_time
             }
             withName: 'T2G' {
-                clusterOptions = '-q ${params.hpc_queue} -P ${params.hpc_project} -lstorage=${params.hpc_storage} -ljobfs=${params.t2g_disk}'
+                clusterOptions = "-q ${params.hpc_queue} -P ${params.hpc_project} -lstorage=${params.hpc_storage} -ljobfs=${params.t2g_disk}"
             }
         }
 
@@ -75,7 +75,7 @@ profiles {
             executor       = 'pbspro'
 
             // Default resources
-            clusterOptions = '-q ${params.hpc_queue} -P ${params.hpc_project} -lstorage=${params.hpc_storage}'
+            clusterOptions = "-q ${params.hpc_queue} -P ${params.hpc_project} -lstorage=${params.hpc_storage}"
             cpus           = params.default_cpus
             memory         = params.default_memory
             time           = params.default_time
@@ -96,7 +96,7 @@ profiles {
                 time       = params.pileup_time
             }
             withName: 'T2G' {
-                clusterOptions = '-q ${params.hpc_queue} -P ${params.hpc_project} -lstorage=${params.hpc_storage} -ljobfs=${params.t2g_disk}'
+                clusterOptions = "-q ${params.hpc_queue} -P ${params.hpc_project} -lstorage=${params.hpc_storage} -ljobfs=${params.t2g_disk}"
             }
         }
 
