--- a/env.yaml
+++ b/env.yaml
@@ -8,7 +8,13 @@ dependencies:
   - samtools
   - r-base
   - r-glue
-  - r-tidyverse
+  - r-dplyr
+  - r-readr
+  - r-tibble
+  - r-stringr
+  - r-magrittr
+  - r-purrr
+  - r-ggplot2
   - r-rlist
   - r-ggrepel
   - bioconductor-genomicfeatures
