--- a/nextflow.config
+++ b/nextflow.config
@@ -42,10 +42,11 @@ profiles {
             executor       = 'pbspro'
 
             // Default resources
-            clusterOptions = "-q ${params.hpc_queue} -P ${params.hpc_project} -lstorage=${params.hpc_storage}"
-            cpus           = params.default_cpus
-            memory         = params.default_memory
-            time           = params.default_time
+            clusterOptions = "-q ${params.hpc_queue} " +
+                             "-P ${params.hpc_project} " +
+                             "-l walltime=${params.default_time} " +
+                             "-l ncpus=${params.default+cpus} " +
+                             "-l mem=${params.default_memory}"
 
             // Per-process overrides
             withName: 'SAMTOOLS_FILTER' {
@@ -63,7 +64,12 @@ profiles {
                 time       = params.pileup_time
             }
             withName: 'T2G' {
-                clusterOptions = "-q ${params.hpc_queue} -P ${params.hpc_project} -lstorage=${params.hpc_storage} -ljobfs=${params.t2g_disk}"
+                clusterOptions = "-q ${params.hpc_queue} " +
+                  "-P ${params.hpc_project} " +
+                  "-l walltime=${params.default_time} " +
+                  "-l ncpus=${params.default+cpus} " +
+                  "-l mem=${params.default_memory} " +
+                  "-l jobfs=${params.t2g_disk}"
             }
         }
 
@@ -75,10 +81,11 @@ profiles {
             executor       = 'pbspro'
 
             // Default resources
-            clusterOptions = "-q ${params.hpc_queue} -P ${params.hpc_project} -lstorage=${params.hpc_storage}"
-            cpus           = params.default_cpus
-            memory         = params.default_memory
-            time           = params.default_time
+            clusterOptions = "-q ${params.hpc_queue} " +
+                             "-P ${params.hpc_project} " +
+                             "-l walltime=${params.default_time} " +
+                             "-l ncpus=${params.default+cpus} " +
+                             "-l mem=${params.default_memory}"
 
             // Per-process overrides
             withName: 'SAMTOOLS_FILTER' {
@@ -96,7 +103,12 @@ profiles {
                 time       = params.pileup_time
             }
             withName: 'T2G' {
-                clusterOptions = "-q ${params.hpc_queue} -P ${params.hpc_project} -lstorage=${params.hpc_storage} -ljobfs=${params.t2g_disk}"
+                clusterOptions = "-q ${params.hpc_queue} " +
+                  "-P ${params.hpc_project} " +
+                  "-l walltime=${params.default_time} " +
+                  "-l ncpus=${params.default+cpus} " +
+                  "-l mem=${params.default_memory} " +
+                  "-l jobfs=${params.t2g_disk}"
             }
         }
 
