--- a/nextflow.config
+++ b/nextflow.config
@@ -45,7 +45,7 @@ profiles {
             clusterOptions = "-q ${params.hpc_queue} " +
                              "-P ${params.hpc_project} " +
                              "-l walltime=${params.default_time} " +
-                             "-l ncpus=${params.default+cpus} " +
+                             "-l ncpus=${params.default_cpus} " +
                              "-l mem=${params.default_memory}"
 
             // Per-process overrides
@@ -67,7 +67,7 @@ profiles {
                 clusterOptions = "-q ${params.hpc_queue} " +
                   "-P ${params.hpc_project} " +
                   "-l walltime=${params.default_time} " +
-                  "-l ncpus=${params.default+cpus} " +
+                  "-l ncpus=${params.default_cpus} " +
                   "-l mem=${params.default_memory} " +
                   "-l jobfs=${params.t2g_disk}"
             }
@@ -84,7 +84,7 @@ profiles {
             clusterOptions = "-q ${params.hpc_queue} " +
                              "-P ${params.hpc_project} " +
                              "-l walltime=${params.default_time} " +
-                             "-l ncpus=${params.default+cpus} " +
+                             "-l ncpus=${params.default_cpus} " +
                              "-l mem=${params.default_memory}"
 
             // Per-process overrides
@@ -106,7 +106,7 @@ profiles {
                 clusterOptions = "-q ${params.hpc_queue} " +
                   "-P ${params.hpc_project} " +
                   "-l walltime=${params.default_time} " +
-                  "-l ncpus=${params.default+cpus} " +
+                  "-l ncpus=${params.default_cpus} " +
                   "-l mem=${params.default_memory} " +
                   "-l jobfs=${params.t2g_disk}"
             }
