--- a/nextflow.config
+++ b/nextflow.config
@@ -42,11 +42,12 @@ profiles {
             executor       = 'pbspro'
 
             // Default resources
-            clusterOptions = "-q ${params.hpc_queue} " +
-                             "-P ${params.hpc_project} " +
-                             "-l walltime=${params.default_time} " +
-                             "-l ncpus=${params.default_cpus} " +
-                             "-l mem=${params.default_memory}"
+            queue          = params.hpc_queue
+            project        = params.hpc_project
+            storage        = params.hpc_storage
+            cpus           = params.default_cpus
+            memory         = params.default_memory
+            time           = params.default_time
 
             // Per-process overrides
             withName: 'SAMTOOLS_FILTER' {
@@ -64,12 +65,7 @@ profiles {
                 time       = params.pileup_time
             }
             withName: 'T2G' {
-                clusterOptions = "-q ${params.hpc_queue} " +
-                  "-P ${params.hpc_project} " +
-                  "-l walltime=${params.default_time} " +
-                  "-l ncpus=${params.default_cpus} " +
-                  "-l mem=${params.default_memory} " +
-                  "-l jobfs=${params.t2g_disk}"
+                disk       = params.t2g_disk // Job filesystem space needed
             }
         }
 
@@ -81,11 +77,12 @@ profiles {
             executor       = 'pbspro'
 
             // Default resources
-            clusterOptions = "-q ${params.hpc_queue} " +
-                             "-P ${params.hpc_project} " +
-                             "-l walltime=${params.default_time} " +
-                             "-l ncpus=${params.default_cpus} " +
-                             "-l mem=${params.default_memory}"
+            queue          = params.hpc_queue
+            project        = params.hpc_project
+            storage        = params.hpc_storage
+            cpus           = params.default_cpus
+            memory         = params.default_memory
+            time           = params.default_time
 
             // Per-process overrides
             withName: 'SAMTOOLS_FILTER' {
@@ -103,12 +100,7 @@ profiles {
                 time       = params.pileup_time
             }
             withName: 'T2G' {
-                clusterOptions = "-q ${params.hpc_queue} " +
-                  "-P ${params.hpc_project} " +
-                  "-l walltime=${params.default_time} " +
-                  "-l ncpus=${params.default_cpus} " +
-                  "-l mem=${params.default_memory} " +
-                  "-l jobfs=${params.t2g_disk}"
+                disk       = params.t2g_disk // Job filesystem space needed
             }
         }
 
