Increase memory for t2g.

--- a/nextflow.config
+++ b/nextflow.config
@@ -18,6 +18,7 @@ params {
     pileup_cpus       = 8                   // Default CPUs to request for modkit pileup
     pileup_memory     = '30GB'              // Default memory to request for modkit pileup
     pileup_time       = '1h'                // Default time to request for modkit pileup
+    t2g_memory        = '30GB'               // Default memory to request for t2g
     t2g_disk          = '5GB'               // Default job filesystem disk space to request for t2g
     hpc_queue         = 'normal'            // User to override this if running in HPC environ
     hpc_project       = 'abc'               // User to override this if running in HPC environ
@@ -66,6 +67,7 @@ profiles {
             }
             withName: 'T2G' {
                 disk       = params.t2g_disk // Job filesystem space needed
+                memory     = params.t2g_memory
             }
         }
 
@@ -101,6 +103,7 @@ profiles {
             }
             withName: 'T2G' {
                 disk       = params.t2g_disk // Job filesystem space needed
+                memory     = params.t2g_memory
             }
         }
 
