--- a/env.yaml
+++ b/env.yaml
@@ -2,20 +2,20 @@ name: modkitopt-env
 channels:
   - conda-forge
   - bioconda
-  - defaults
 dependencies:
   - python>=3.0
-  - samtools
-  - r-base
-  - r-glue
-  - r-dplyr
-  - r-readr
-  - r-tibble
-  - r-stringr
-  - r-magrittr
-  - r-purrr
-  - r-ggplot2
-  - r-rlist
-  - r-ggrepel
-  - bioconductor-genomicfeatures
-  - bioconductor-txdbmaker
+  - samtools=1.21
+  - r-base=4.4
+  - r-glue=1.8.0
+  - r-dplyr=1.1.4
+  - r-readr=2.1.5
+  - r-tibble=3.3.0
+  - r-stringr=1.5.1
+  - r-magrittr=2.0.3
+  - r-purrr=1.1.0
+  - r-ggplot2=3.5.2
+  - r-rlist=0.4.6.2
+  - r-ggrepel=0.9.6
+  - r-paletteer=1.6.0
+  - bioconductor-genomicfeatures=1.58.0
+  - bioconductor-txdbmaker=1.2.0
