--- a/nextflow.config
+++ b/nextflow.config
@@ -5,9 +5,11 @@ params {
     fasta             = null                // Reference fasta file for modkit
     ground_truth      = null                // Ground truth modification sites
     filter_thresholds = [0.5, 0.75, 0.9,
-                         0.95, 0.99, 0.995] // filter_threshold values to test
+                         0.95, 0.99,
+                         0.995, default]    // Modkit --filter_threshold values to test
     mod_thresholds    = [0.5, 0.75, 0.9,
-                         0.95, 0.99, 0.995] // mod_threshold values to test
+                         0.95, 0.99,
+                         0.995, default]    // Modkit --mod_threshold values to test
     outdir            = "results"           // Where to write results
     default_cpus      = 1                   // Default CPUs to request per process
     default_memory    = '8GB'               // Default memory to request per process
