Refactor nextflow.config and add specific output directories.

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,4 +1,7 @@
 params {
+    //--------------------------------------------------------------------------
+    // Inputs
+    //--------------------------------------------------------------------------
     modbam            = null                // Path to modBAM file output by mod caller
     mod_type          = null                // Type of modification
     modkit            = null                // Path to modkit executable
@@ -10,7 +13,19 @@ params {
     mod_thresholds    = [0.5, 0.75, 0.9,
                          0.95, 0.99,
                          0.995, default]    // Modkit --mod_threshold values to test
-    outdir            = "results"           // Where to write results
+
+    //--------------------------------------------------------------------------
+    // Directories to write output to
+    //--------------------------------------------------------------------------
+    outdir_samtools   = "results/samtools"         // samtools outputs
+    outdir_t2g        = "results/t2g"              // t2g outputs
+    outdir_pileup     = "results/pileup"           // modkit pileup outputs
+    outdir_pr         = "results/precision_recall" // Precision recall outputs
+    outdir_params     = "results/compare_params    // Final comparison outputs
+
+    //--------------------------------------------------------------------------
+    // Resources
+    //--------------------------------------------------------------------------
     default_cpus      = 1                   // Default CPUs to request per process
     default_memory    = '8GB'               // Default memory to request per process
     default_time      = '1h'                // Default time to request per process
@@ -29,93 +44,23 @@ params {
 
 profiles {
     local {
-        process.executor   = 'local'
-        params.pileup_cpus = 2
-        conda.enabled      = true
+        includeConfig 'profiles/local.config'
     }
 
     slurm {
-        process.executor   = 'slurm'
-        process.queue      = 'general'
-        conda.enabled      = true
+        includeConfig 'profiles/slurm.config'
     }
 
     pbs {
-        process {
-            executor       = 'pbspro'
-
-            // Default resources
-            queue          = params.hpc_queue
-            project        = params.hpc_project
-            storage        = params.hpc_storage
-            cpus           = params.default_cpus
-            memory         = params.default_memory
-            time           = params.default_time
-
-            // Per-process overrides
-            withName: 'SAMTOOLS_FILTER' {
-                cpus       = params.filter_cpus
-            }
-            withName: 'SAMTOOLS_SORT' {
-                cpus       = params.sort_cpus
-            }
-            withName: 'SAMTOOLS_INDEX' {
-                cpus       = params.index_cpus
-            }
-            withName: 'MODKIT_PILEUP' {
-                cpus       = params.pileup_cpus
-                memory     = params.pileup_memory
-                time       = params.pileup_time
-            }
-            withName: 'T2G' {
-                disk       = params.t2g_disk // Job filesystem space needed
-                memory     = params.t2g_memory
-            }
-        }
-
-        conda.enabled      = true
+        includeConfig 'profiles/pbs.config'
     }
 
     pbspro {
-        process {
-            executor       = 'pbspro'
-
-            // Default resources
-            queue          = params.hpc_queue
-            project        = params.hpc_project
-            storage        = params.hpc_storage
-            cpus           = params.default_cpus
-            memory         = params.default_memory
-            time           = params.default_time
-
-            // Per-process overrides
-            withName: 'SAMTOOLS_FILTER' {
-                cpus       = params.filter_cpus
-            }
-            withName: 'SAMTOOLS_SORT' {
-                cpus       = params.sort_cpus
-            }
-            withName: 'SAMTOOLS_INDEX' {
-                cpus       = params.index_cpus
-            }
-            withName: 'MODKIT_PILEUP' {
-                cpus       = params.pileup_cpus
-                memory     = params.pileup_memory
-                time       = params.pileup_time
-            }
-            withName: 'T2G' {
-                disk       = params.t2g_disk // Job filesystem space needed
-                memory     = params.t2g_memory
-            }
-        }
-
-        conda.enabled      = true
+        includeConfig 'profiles/pbspro.config'
     }
 
     // default profile
     standard {
-        process.executor   = 'local'
-        params.pileup_cpus = 2
-        conda.enabled      = true
+        includeConfig 'profiles/standard.config'
     }
 }
