--- a/nextflow.config
+++ b/nextflow.config
@@ -9,10 +9,10 @@ params {
     ground_truth      = null                // Ground truth modification sites
     filter_thresholds = [0.5, 0.75, 0.9,
                          0.95, 0.99,
-                         0.995, default]    // Modkit --filter_threshold values to test
+                         0.995, "default"]  // Modkit --filter_threshold values to test
     mod_thresholds    = [0.5, 0.75, 0.9,
                          0.95, 0.99,
-                         0.995, default]    // Modkit --mod_threshold values to test
+                         0.995, "default"]  // Modkit --mod_threshold values to test
 
     //--------------------------------------------------------------------------
     // Directories to write output to
@@ -21,7 +21,7 @@ params {
     outdir_t2g        = "results/t2g"              // t2g outputs
     outdir_pileup     = "results/pileup"           // modkit pileup outputs
     outdir_pr         = "results/precision_recall" // Precision recall outputs
-    outdir_params     = "results/compare_params    // Final comparison outputs
+    outdir_params     = "results/compare_params"   // Final comparison outputs
 
     //--------------------------------------------------------------------------
     // Resources
