--- a/nextflow.config
+++ b/nextflow.config
@@ -8,11 +8,9 @@ params {
     fasta             = null                // Reference fasta file for modkit
     ground_truth      = null                // Ground truth modification sites
     filter_thresholds = [0.5, 0.75, 0.9,
-                         0.95, 0.99,
-                         0.995, "default"]  // Modkit --filter_threshold values to test
+                         0.95, 0.99, 0.995] // Modkit --filter_threshold values to test
     mod_thresholds    = [0.5, 0.75, 0.9,
-                         0.95, 0.99,
-                         0.995, "default"]  // Modkit --mod_threshold values to test
+                         0.95, 0.99, 0.995] // Modkit --mod_threshold values to test
 
     //--------------------------------------------------------------------------
     // Directories to write output to
