--- a/nextflow.config
+++ b/nextflow.config
@@ -6,6 +6,7 @@ params {
     mod_type          = null                // Type of modification
     modkit            = null                // Path to modkit executable
     fasta             = null                // Reference fasta file for modkit
+    annotation        = null                // Annotation file for t2g
     ground_truth      = null                // Ground truth modification sites
     filter_thresholds = [0.5, 0.75, 0.9,
                          0.95, 0.99, 0.995] // Modkit --filter_threshold values to test
