--- a/nextflow.config
+++ b/nextflow.config
@@ -16,11 +16,12 @@ params {
     //--------------------------------------------------------------------------
     // Directories to write output to
     //--------------------------------------------------------------------------
-    outdir_samtools   = "results/samtools"         // samtools outputs
-    outdir_t2g        = "results/t2g"              // t2g outputs
-    outdir_pileup     = "results/pileup"           // modkit pileup outputs
-    outdir_pr         = "results/precision_recall" // Precision recall outputs
-    outdir_params     = "results/compare_params"   // Final comparison outputs
+    top_outdir        = "results"
+    outdir_samtools   = "{top_outdir}/samtools"         // samtools outputs
+    outdir_t2g        = "{top_outdir}/t2g"              // t2g outputs
+    outdir_pileup     = "{top_outdir}/pileup"           // modkit pileup outputs
+    outdir_pr         = "{top_outdir}/precision_recall" // Precision recall outputs
+    outdir_params     = "{top_outdir}/compare_params"   // Final comparison outputs
 
     //--------------------------------------------------------------------------
     // Resources
