--- a/nextflow.config
+++ b/nextflow.config
@@ -17,11 +17,11 @@ params {
     // Directories to write output to
     //--------------------------------------------------------------------------
     top_outdir        = "results"
-    outdir_samtools   = "{top_outdir}/samtools"         // samtools outputs
-    outdir_t2g        = "{top_outdir}/t2g"              // t2g outputs
-    outdir_pileup     = "{top_outdir}/pileup"           // modkit pileup outputs
-    outdir_pr         = "{top_outdir}/precision_recall" // Precision recall outputs
-    outdir_params     = "{top_outdir}/compare_params"   // Final comparison outputs
+    outdir_samtools   = "${top_outdir}/samtools"         // samtools outputs
+    outdir_t2g        = "${top_outdir}/t2g"              // t2g outputs
+    outdir_pileup     = "${top_outdir}/pileup"           // modkit pileup outputs
+    outdir_pr         = "${top_outdir}/precision_recall" // Precision recall outputs
+    outdir_params     = "${top_outdir}/compare_params"   // Final comparison outputs
 
     //--------------------------------------------------------------------------
     // Resources
