Make top-level out dir a command-line arg.

--- a/nextflow.config
+++ b/nextflow.config
@@ -12,16 +12,7 @@ params {
                          0.95, 0.99, 0.995] // Modkit --filter_threshold values to test
     mod_thresholds    = [0.5, 0.75, 0.9,
                          0.95, 0.99, 0.995] // Modkit --mod_threshold values to test
-
-    //--------------------------------------------------------------------------
-    // Directories to write output to
-    //--------------------------------------------------------------------------
-    top_outdir        = "results"
-    outdir_samtools   = "${top_outdir}/samtools"         // samtools outputs
-    outdir_t2g        = "${top_outdir}/t2g"              // t2g outputs
-    outdir_pileup     = "${top_outdir}/pileup"           // modkit pileup outputs
-    outdir_pr         = "${top_outdir}/precision_recall" // Precision recall outputs
-    outdir_params     = "${top_outdir}/compare_params"   // Final comparison outputs
+    top_outdir        = "results"           // Where to write output to
 
     //--------------------------------------------------------------------------
     // Resources
