Ready for testing.

--- a/nextflow.config
+++ b/nextflow.config
@@ -7,30 +7,31 @@ params {
     modkit            = null                // Path to modkit executable
     fasta             = null                // Reference fasta file for modkit
     annotation        = null                // Annotation file for t2g
-    ground_truth      = null                // Ground truth modification sites
+    truth_sites       = null                // Ground truth modification sites
     filter_thresholds = [0.5, 0.75, 0.9,
                          0.95, 0.99, 0.995] // Modkit --filter_threshold values to test
     mod_thresholds    = [0.5, 0.75, 0.9,
                          0.95, 0.99, 0.995] // Modkit --mod_threshold values to test
     top_outdir        = "results"           // Where to write output to
+    help              = null                // Initialise help message
 
     //--------------------------------------------------------------------------
     // Resources
     //--------------------------------------------------------------------------
-    default_cpus      = 1                   // Default CPUs to request per process
-    default_memory    = '8GB'               // Default memory to request per process
-    default_time      = '1h'                // Default time to request per process
-    filter_cpus       = 8                   // Default CPUs to request for samtools filter
-    sort_cpus         = 8                   // Default CPUs to request for samtools sort
-    index_cpus        = 4                   // Default CPUs to request for samtools index
-    pileup_cpus       = 8                   // Default CPUs to request for modkit pileup
-    pileup_memory     = '30GB'              // Default memory to request for modkit pileup
-    pileup_time       = '1h'                // Default time to request for modkit pileup
-    t2g_memory        = '30GB'               // Default memory to request for t2g
-    t2g_disk          = '5GB'               // Default job filesystem disk space to request for t2g
-    hpc_queue         = 'normal'            // User to override this if running in HPC environ
-    hpc_project       = 'abc'               // User to override this if running in HPC environ
-    hpc_storage       = 'storage/path'      // User to override this if running in HPC environ
+    default_cpus      = 1         // Default CPUs to request per process
+    default_memory    = '8GB'     // Default memory to request per process
+    default_time      = '1h'      // Default time to request per process
+    filter_cpus       = 8         // Default CPUs to request for samtools filter
+    sort_cpus         = 8         // Default CPUs to request for samtools sort
+    index_cpus        = 4         // Default CPUs to request for samtools index
+    pileup_cpus       = 8         // Default CPUs to request for modkit pileup
+    pileup_memory     = '30GB'    // Default memory to request for modkit pileup
+    pileup_time       = '1h'      // Default time to request for modkit pileup
+    t2g_memory        = '30GB'    // Default memory to request for t2g
+    t2g_disk          = '5GB'     // Default job filesystem disk space to request for t2g
+    hpc_queue         = null      // User to override this if running in HPC environ
+    hpc_project       = null      // User to override this if running in HPC environ
+    hpc_storage       = null      // User to override this if running in HPC environ
 }
 
 profiles {
