--- a/profiles/slurm.config
+++ b/profiles/slurm.config
@@ -1,3 +1,35 @@
-process.executor   = 'slurm'
-process.queue      = 'general'
-conda.enabled      = true
+process {
+    executor = 'slurm'
+
+    // Default resources
+    queue     = params.hpc_queue       // maps to --partition
+    account   = params.hpc_project     // maps to --account
+    cpus      = params.default_cpus
+    memory    = params.default_memory
+    time      = params.default_time
+
+    // Use local scratch if available
+    scratch   = true
+
+    // Per-process overrides
+    withName: 'SAMTOOLS_FILTER' {
+        cpus = params.filter_cpus
+    }
+    withName: 'SAMTOOLS_SORT' {
+        cpus = params.sort_cpus
+    }
+    withName: 'SAMTOOLS_INDEX' {
+        cpus = params.index_cpus
+    }
+    withName: 'MODKIT_PILEUP' {
+        cpus  = params.pileup_cpus
+        memory = params.pileup_memory
+        time   = params.pileup_time
+    }
+    withName: 'T2G' {
+        memory = params.t2g_memory
+        disk   = params.t2g_disk
+    }
+}
+
+conda.enabled = true
