Add install mode.

--- a/nextflow.config
+++ b/nextflow.config
@@ -14,6 +14,7 @@ params {
                          0.95, 0.99, 0.995] // Modkit --mod_threshold values to test
     top_outdir        = "results"           // Where to write output to
     help              = null                // Initialise help message
+    install           = false               // Whether to run in install mode
 
     //--------------------------------------------------------------------------
     // Resources
@@ -51,8 +52,8 @@ profiles {
         includeConfig 'profiles/pbspro.config'
     }
 
-    // default profile
+    // default profile if profile not specified
     standard {
-        includeConfig 'profiles/standard.config'
+        includeConfig 'profiles/local.config'
     }
 }
