--- a/nextflow.config
+++ b/nextflow.config
@@ -15,6 +15,7 @@ params {
     top_outdir        = "results"           // Where to write output to
     help              = null                // Initialise help message
     install           = false               // Whether to run in install mode
+    demo              = false               // Whether to run demo
 
     //--------------------------------------------------------------------------
     // Resources
